[package]
name = "arbitrary"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
snap = "1.1"   # Rust Snappy library
libc = "0.2"   # For C types

[workspace]

[package]
name = "arbitrary" # the name of the package
version = "0.1.0" # the current version, obeying semver
